# sicstus-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.org  ex.c  ex.pl
examples/kissat-extension/: Cargo.toml  Makefile  satsolver.c  satsolver.pl
examples/kissat-extension/src/: lib.rs  satsolver.rs
integration_tests/: .gitignore  Cargo.toml  Makefile  build.rs  integration_tests.pl
integration_tests/src/: lib.rs  list.rs  query.rs  sys.rs
sicstus-sys/: Cargo.toml  README.md  build.rs
sicstus-sys/src/: lib.rs
src/: allocator.rs  atom.rs  conversions.rs  error.rs  lib.rs  predicate.rs  query.rs  sp.rs  spmacro.rs  stash.rs  sys.rs  term.rs  term_ref.rs  unit_tests.rs  util.rs
src/sp/: atom.rs  errors.rs  interface.rs  io.rs  memory.rs  mod.rs  streams.rs  terms.rs
src/term/: conversions.rs  mod.rs
src/terms/: atom.rs  compound.rs  float.rs  integer.rs  mod.rs  variable.rs
