[package]
name = "sicstus-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
mockall = "0.11.4"
mockall_double = "0.3.0"

[dependencies]
custom-print = "1.0.0"
lazy_static = "1.4.0"
libc-print = "0.1.22"
regex = "1.9.5"
repr-trait = "1.0.0"
sicstus-sys = { path = "./sicstus-sys", version = "0.1.0" , features = ["alloc", "print"]}

[features]
default = ["alloc", "print"]
alloc = ["sicstus-sys/alloc"]
print = ["sicstus-sys/print"]
