[package]
name = "sicstus-sys"
version = "0.1.0"
edition = "2021"
description = " Low-level Rust bindings for SICStus Prolog."
categories = ["external-ffi-bindings"]


[build-dependencies]
bindgen = "0.65.1"

[dependencies]
lazy_static = "1.4.0"
custom-print = { version="1.0.0", default-features=false }

[features]
alloc = []
print = []
